# claude-code-insights

./: .gitignore  LICENSE  README.md  pyproject.toml
claude_insights/: __init__.py  __main__.py  cli.py  gemini.py  sessions.py
claude_insights/prompts/: report_prompt.txt
