[project]
name = "claude-code-insights"
version = "0.1.0"
description = "Analyze your Claude Code sessions — extract patterns, generate coaching reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Yulong Liang"}]
keywords = ["claude", "claude-code", "analytics", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
claude-insights = "claude_insights.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
